Added solution function

--- a/meepc.ipynb
+++ b/meepc.ipynb
@@ -4,17 +4,30 @@
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\Users\\user\\AppData\\Local\\Packages\\PythonSoftwareFoundation.Python.3.9_qbz5n2kfra8p0\\LocalCache\\local-packages\\Python39\\site-packages\\numpy\\_distributor_init.py:30: UserWarning: loaded more than 1 DLL from .libs:\n",
+      "C:\\Users\\user\\AppData\\Local\\Packages\\PythonSoftwareFoundation.Python.3.9_qbz5n2kfra8p0\\LocalCache\\local-packages\\Python39\\site-packages\\numpy\\.libs\\libopenblas.EL2C6PLE4ZYW3ECEVIV3OXXGRN2NRFM2.gfortran-win_amd64.dll\n",
+      "C:\\Users\\user\\AppData\\Local\\Packages\\PythonSoftwareFoundation.Python.3.9_qbz5n2kfra8p0\\LocalCache\\local-packages\\Python39\\site-packages\\numpy\\.libs\\libopenblas.WCDJNK7YVMPZQ2ME2ZZHJJRJ3JIKNDB7.gfortran-win_amd64.dll\n",
+      "  warnings.warn(\"loaded more than 1 DLL from .libs:\"\n"
+     ]
+    }
+   ],
    "source": [
     "import numpy as np\n",
-    "import pandas as pd\n",
+    "\n",
     "import matplotlib.pyplot as plt\n",
-    "from random import random"
+    "\n",
+    "from random import random\n",
+    "from copy import deepcopy"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -23,7 +36,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -34,7 +47,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -43,7 +56,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -52,7 +65,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -62,22 +75,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "75"
+       "15"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "# X[100,:]\n",
     "index= np.random.randint(100)\n",
     "index"
    ]
@@ -330,12 +342,11 @@
    "outputs": [],
    "source": [
     "def coordinatedescent(S,Z,i,var_x):\n",
-    "  \n",
     "  sum=0\n",
     "  for j in range(4):\n",
     "    sum+=1/var_x[i,j]+(S[i,j]/Z[i,j])\n",
     "  if(sum==1):\n",
-    "    return var[i] \n"
+    "    return var_x[i] \n"
    ]
   },
   {
@@ -344,7 +355,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def getS(h,alpha,Z,n,d.i):\n",
+    "def getS(h,alpha,Z,n,d,i):\n",
     "  S = np.reshape([random()*100 for io in range(400)],(100,4))\n",
     "  for j in range(4):\n",
     "    S[i,j]= h[j]-alpha[j]*Z[i,j]\n",
@@ -357,29 +368,71 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def meepcalgo(n,):\n",
-    "  \n",
+    "def meepcalgo(n):\n",
     "  index= np.random.randint(n)\n",
+    "  converged = False\n",
     "  # alpha_i=X[index,:]\n",
-    "  while(!converged and index<=99):\n",
-    "    if(index==99):\n",
-    "      index=0\n",
+    "  while(index<100):\n",
+    "    if converged:\n",
+    "      break\n",
     "    alpha_old = alpha[index]\n",
     "    S = getS(h,alpha_old,Z,n,4,index)\n",
     "    var_x=np.reshape([random() for i in range(100)],(100,4))\n",
-    "    f_val=coordinatedescent(S,Z,index),var_x\n",
+    "    f_val=coordinatedescent(S,Z,index)\n",
     "    index+=1\n",
+    "    if(index==100):\n",
+    "      index=0\n",
     "\n",
     "  \n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def solution():\n",
+    "    i = 0\n",
+    "    updates = 0\n",
+    "    converged = False\n",
+    "    alpha_old = np.zeros(100)\n",
+    "    old = 0\n",
+    "    while i < 100:\n",
+    "        if converged:\n",
+    "            break\n",
+    "        alpha_old[i] = alpha[i]\n",
+    "        for j in range(4):\n",
+    "            s_i_j = h[j] - alpha[i]*Z[i][j]\n",
+    "            f_x += (1/(i/100 + s_i_j/Z[i][j]))\n",
+    "        if f_x == 1:\n",
+    "            alpha[i] = i/100\n",
+    "        else:\n",
+    "            alpha[i] = 0\n",
+    "        h = h + (alpha[i] - alpha_old[i])*Z[i]\n",
+    "        i += 1\n",
+    "        if i>99 :\n",
+    "            i = 0\n",
+    "            updates += 1\n",
+    "            if old == 0:\n",
+    "                stored_alpha_old = deepcopy(alpha_old)\n",
+    "                old = 1\n",
+    "        if updates == 4:\n",
+    "            if np.all(alpha - stored_alpha_old) < .00001:\n",
+    "                converged = True\n",
+    "            else:\n",
+    "                updates = 0\n",
+    "                stored_alpha_old = deepcopy(alpha)\n",
+    "    \n"
    ]
   }
  ],
  "metadata": {
   "interpreter": {
-   "hash": "5f5277ade0e427ba53f4f59731df06a81409d3d5d18aa06b18e04ee34f04aaa5"
+   "hash": "497338f01161d141240caa60efca5087225791fadc9b7c964beb65d863e046f0"
   },
   "kernelspec": {
-   "display_name": "Python 3.8.13 ('tensor')",
+   "display_name": "Python 3.9.13 64-bit (windows store)",
    "language": "python",
    "name": "python3"
   },
@@ -393,7 +446,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.13"
+   "version": "3.9.13"
   },
   "orig_nbformat": 4
  },
