--- a/meepc.ipynb
+++ b/meepc.ipynb
@@ -27,7 +27,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -36,7 +36,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -47,7 +47,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -56,7 +56,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -65,334 +65,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 6,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([803.43062001, 768.00097993, 759.7226528 , 832.58789476])"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "ZT = Z.T\n",
-    "h = np.matmul(alpha,Z)"
+    "h = np.matmul(alpha,Z)\n",
+    "h"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "15"
-      ]
-     },
-     "execution_count": 13,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "index= np.random.randint(100)\n",
-    "index"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 8,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "array([[9.07565832e+01, 7.29693274e+00, 6.30367142e+01, 3.95414299e+01],\n",
-       "       [4.91752422e+01, 6.47394782e+01, 8.20352505e+01, 7.68201428e+01],\n",
-       "       [3.82919184e+01, 8.98790465e+01, 7.63575668e+01, 6.61069039e+01],\n",
-       "       [1.53841008e+01, 1.39966427e+01, 9.82982211e+01, 7.49339880e+01],\n",
-       "       [1.88440427e+01, 9.38912604e+01, 1.22615759e+01, 2.34007938e+01],\n",
-       "       [8.93420502e+00, 6.17166878e+01, 5.94289783e+01, 8.65132662e+01],\n",
-       "       [7.91123429e+01, 3.33971068e+01, 2.19435544e+01, 3.70249483e+01],\n",
-       "       [2.26642662e+01, 2.74229621e+01, 7.52100130e+01, 3.86496830e+00],\n",
-       "       [5.55219039e+01, 9.20674835e+01, 6.91022006e+01, 5.36873129e+00],\n",
-       "       [7.16482151e+01, 7.42491268e+01, 3.29797129e+01, 2.42717265e+01],\n",
-       "       [3.22600668e+01, 5.70113084e+01, 6.75707286e+01, 6.17040748e+01],\n",
-       "       [6.95456011e+00, 5.71122547e+01, 7.15545561e+01, 2.56959901e+01],\n",
-       "       [8.71368079e+01, 4.89627061e+01, 6.91564292e+00, 7.85804653e+01],\n",
-       "       [9.66910122e+01, 8.22320797e+01, 1.12841048e+01, 2.51806782e+00],\n",
-       "       [4.63597075e+00, 2.31286018e+01, 1.44685958e+01, 6.96050483e+01],\n",
-       "       [2.72260056e+01, 8.61777014e+01, 8.21104799e+01, 3.54435540e+01],\n",
-       "       [9.92454435e+01, 6.09389575e+01, 2.80889665e+01, 6.39358294e+01],\n",
-       "       [7.83237870e+01, 4.85477768e+01, 6.28218791e+01, 7.83974484e+00],\n",
-       "       [9.82905800e+01, 6.65869328e+01, 2.96509745e+01, 6.81855397e+01],\n",
-       "       [9.26164032e+01, 9.33464745e+01, 2.32940623e+01, 7.56736799e+01],\n",
-       "       [6.04559831e+01, 6.43614414e+00, 3.98574891e+01, 6.66084704e+01],\n",
-       "       [7.17498001e+01, 4.42063707e+01, 6.19750298e+01, 7.24385583e+01],\n",
-       "       [3.02550829e+01, 3.14711608e+01, 4.33348460e+01, 1.75780718e+01],\n",
-       "       [5.95115503e+01, 1.02039461e+01, 2.34476973e-02, 1.71545177e+01],\n",
-       "       [3.63963957e+01, 3.47088715e+01, 3.11663928e+01, 3.49237144e+01],\n",
-       "       [1.03623902e+01, 7.92781296e+01, 4.96434570e+00, 7.21201179e+01],\n",
-       "       [7.70385168e+01, 4.52274055e+01, 3.75322115e+01, 9.92337184e+01],\n",
-       "       [2.39245261e+00, 9.60716975e+00, 8.26577307e+01, 2.85600042e+01],\n",
-       "       [1.04325615e+01, 7.81032521e+01, 9.25180252e+01, 8.06159059e-01],\n",
-       "       [2.54976875e+01, 6.91519842e+01, 1.78587471e+01, 4.83738206e+01],\n",
-       "       [2.39117287e+01, 7.05894307e+01, 2.03912525e+01, 9.14574346e+01],\n",
-       "       [3.58503131e+01, 6.30925544e+01, 4.76831761e+01, 8.52139289e+01],\n",
-       "       [8.22133229e+01, 3.35441791e+01, 4.57974415e+01, 3.33279661e+01],\n",
-       "       [9.89634125e+01, 7.36369847e+01, 4.62537730e+01, 4.21091736e+01],\n",
-       "       [7.65023736e-01, 6.80291802e+01, 8.28124244e+01, 6.20199625e+01],\n",
-       "       [5.18305439e+01, 8.43213767e+01, 1.85776928e+00, 8.24774094e+01],\n",
-       "       [2.62590422e+01, 2.19294631e+01, 3.47029957e+01, 6.15028480e+01],\n",
-       "       [6.12011100e+01, 8.84315786e+01, 7.13511016e+01, 5.27363700e+01],\n",
-       "       [3.35403247e+01, 4.22459111e+01, 6.98490563e+01, 6.02232499e+01],\n",
-       "       [3.71448103e+01, 2.73815983e+00, 2.03000778e+01, 5.48152722e+01],\n",
-       "       [5.14219583e+01, 3.25633100e+01, 3.65437211e+01, 6.34311289e+01],\n",
-       "       [2.39562800e+01, 4.21922680e+01, 3.82379331e+01, 8.89073627e+01],\n",
-       "       [3.51407059e+01, 6.05905480e+01, 9.91586663e+01, 6.53061419e+01],\n",
-       "       [3.84547362e+01, 7.04559318e+01, 2.69401481e+01, 2.59306395e+01],\n",
-       "       [6.35108473e+01, 4.09806612e+00, 5.54070376e+01, 2.36894163e+01],\n",
-       "       [4.91298540e+01, 6.66605501e+01, 5.85568000e+01, 3.14412013e+01],\n",
-       "       [1.73275383e+01, 2.35601700e+01, 3.26887835e+01, 4.79558068e+01],\n",
-       "       [4.88148154e+01, 3.22492515e+01, 9.51051023e+01, 9.75353304e+01],\n",
-       "       [3.70186384e+01, 3.20323853e+01, 4.28236190e+01, 5.92150771e+01],\n",
-       "       [8.69622846e+01, 9.44798769e+01, 1.41843485e+01, 4.53887298e+01],\n",
-       "       [5.55724065e+01, 3.36524874e+01, 1.98687198e+00, 9.20657064e+01],\n",
-       "       [3.63832992e+01, 6.02293139e+01, 3.61449283e+01, 4.26499661e+01],\n",
-       "       [3.23778754e+01, 2.15523182e+01, 1.92654936e+01, 1.17495120e+01],\n",
-       "       [4.17954010e+01, 9.81774903e+01, 5.23623726e+00, 3.74644166e+01],\n",
-       "       [8.64704967e+01, 4.41351781e+01, 4.93915542e+01, 6.11258267e+01],\n",
-       "       [5.51050236e+01, 6.22459934e+01, 4.50248385e+01, 1.27735259e+01],\n",
-       "       [2.40051468e+01, 5.79185403e+01, 2.76009014e+01, 7.44132679e+01],\n",
-       "       [5.79820773e+01, 8.54525571e+01, 5.99267588e+01, 7.66571196e+01],\n",
-       "       [3.12681571e+01, 9.10363263e+01, 6.45321261e+01, 7.54790935e+01],\n",
-       "       [6.33110881e+01, 3.75677062e+00, 6.70243185e+00, 3.57334393e+01],\n",
-       "       [6.23077947e+00, 5.83456222e+01, 5.75433377e+01, 9.09444985e+01],\n",
-       "       [3.36457357e+01, 2.44156257e+01, 2.37490476e+00, 7.20309797e+01],\n",
-       "       [1.27449213e+01, 3.40565462e+01, 5.51651231e+01, 8.71203048e+00],\n",
-       "       [5.42856423e-01, 4.30545352e+01, 7.11244161e+01, 5.72664661e+00],\n",
-       "       [2.25910737e+01, 8.71205473e+01, 5.33866450e+01, 2.42097134e+01],\n",
-       "       [1.29517190e+01, 9.89330758e+01, 2.34429285e+01, 1.09382299e+00],\n",
-       "       [3.27915453e+01, 6.59177584e+01, 4.26004444e+01, 1.76869683e+01],\n",
-       "       [5.62679907e+00, 6.41758425e+01, 3.76123807e+01, 8.46245358e+01],\n",
-       "       [8.91693591e+01, 4.51371261e+01, 2.15186841e+01, 6.89359555e-01],\n",
-       "       [1.52113795e+01, 6.87898959e+01, 9.72528836e+01, 5.18036824e+00],\n",
-       "       [4.31275879e+01, 4.82595597e+01, 9.38035309e+01, 8.35701754e+01],\n",
-       "       [6.43176957e+01, 8.80180861e+01, 4.36357866e+01, 2.38463429e+01],\n",
-       "       [6.44176178e+01, 1.55212902e+01, 2.32237946e+00, 5.91604446e+01],\n",
-       "       [8.47255164e+01, 6.68139657e+01, 3.16382361e+01, 9.71277515e+01],\n",
-       "       [6.49781923e+01, 7.36719892e+01, 6.05359205e+01, 9.92751131e+01],\n",
-       "       [1.96957095e+01, 4.71433026e+01, 7.84428628e+01, 3.58813599e+01],\n",
-       "       [3.82203546e+01, 3.22521900e+01, 5.07300769e+01, 3.78123434e+01],\n",
-       "       [6.06378547e+00, 8.62349492e+01, 5.37318273e+01, 3.68132984e+01],\n",
-       "       [9.93284105e+01, 1.70560891e+00, 3.11097391e+01, 6.16039091e+01],\n",
-       "       [9.90350296e+01, 7.37077390e+01, 6.70413627e+01, 8.61882851e+01],\n",
-       "       [8.76506933e+01, 1.01819755e+01, 2.25304650e+01, 9.06825394e+01],\n",
-       "       [8.39294095e+01, 5.26790830e+00, 9.44698526e+01, 6.21866103e+01],\n",
-       "       [9.01153203e+01, 6.46990954e+00, 5.70960625e+00, 8.24669280e+01],\n",
-       "       [3.46375841e+01, 3.46501799e+01, 6.78453308e+01, 8.28848015e+01],\n",
-       "       [3.34001867e+00, 5.99450482e+01, 1.68550757e+01, 7.68894950e+01],\n",
-       "       [1.76981818e+01, 6.53134378e+01, 7.65423969e+01, 9.80697074e+00],\n",
-       "       [9.16979861e+01, 4.81909528e+01, 1.60686980e+01, 4.77253884e+01],\n",
-       "       [9.52350795e+01, 5.75652029e+01, 2.08404961e+01, 1.29696843e+01],\n",
-       "       [1.85722964e+01, 3.64326207e+01, 1.49463074e+01, 3.92384397e+01],\n",
-       "       [3.76860062e+01, 8.35704093e+01, 7.59095492e+01, 4.38888553e+01],\n",
-       "       [9.85638530e+01, 4.16528382e+01, 8.07614097e+01, 5.55396797e+00],\n",
-       "       [2.69247401e+01, 9.90492944e+01, 6.52511382e+01, 6.84115637e+01],\n",
-       "       [5.06460036e+01, 3.55771568e+01, 8.95350722e+01, 8.58946542e+01],\n",
-       "       [3.11518325e+01, 8.12040786e+01, 2.15040692e+01, 3.33259106e+01],\n",
-       "       [6.17275164e+01, 6.74744594e+01, 3.94306218e+01, 7.26404434e+01],\n",
-       "       [4.07207797e+01, 1.16930398e+01, 1.24869170e+01, 4.33571450e+01],\n",
-       "       [4.18472321e+01, 8.56814482e+00, 7.98654654e+00, 9.11473538e+01],\n",
-       "       [6.73475175e+01, 1.15472608e+01, 1.69893043e+01, 6.05889164e+01],\n",
-       "       [3.48137439e+01, 1.85875127e+01, 7.76836886e+01, 5.24700126e+00],\n",
-       "       [3.82126675e+01, 4.85910387e+01, 7.54577397e+01, 9.81175067e+01]])"
-      ]
-     },
-     "execution_count": 8,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "S = np.reshape([random()*100 for i in range(400)],(100,4))\n",
-    "S"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 10,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "[0.31821134774719595,\n",
-       " 0.01526004993400265,\n",
-       " 0.2126476483379055,\n",
-       " 0.09924182741870391,\n",
-       " 0.3999886467734144,\n",
-       " 0.8094942919051897,\n",
-       " 0.29155248661934263,\n",
-       " 0.6286871238032863,\n",
-       " 0.0021483816300531533,\n",
-       " 0.07201824161264514,\n",
-       " 0.12107858005040051,\n",
-       " 0.5841992323010515,\n",
-       " 0.24624134236486128,\n",
-       " 0.6254871332920876,\n",
-       " 0.4538135854501133,\n",
-       " 0.6381631224994785,\n",
-       " 0.5409896627790717,\n",
-       " 0.4956349718148324,\n",
-       " 0.06885043023246717,\n",
-       " 0.09722748926287161,\n",
-       " 0.01942902685979797,\n",
-       " 0.9290220927799087,\n",
-       " 0.3750745596156482,\n",
-       " 0.6998986156974898,\n",
-       " 0.9290731661618561,\n",
-       " 0.2657980682188299,\n",
-       " 0.22762582531576492,\n",
-       " 0.5174277739356535,\n",
-       " 0.7838223473917774,\n",
-       " 0.9175608807504249,\n",
-       " 0.09592318778288778,\n",
-       " 0.18412397809222714,\n",
-       " 0.7970695933727334,\n",
-       " 0.5945793879389263,\n",
-       " 0.6004164412443577,\n",
-       " 0.8210858350749879,\n",
-       " 0.4287328937403724,\n",
-       " 0.48835537676672924,\n",
-       " 0.5428867001616855,\n",
-       " 0.40594608621706574,\n",
-       " 0.41479266710333607,\n",
-       " 0.5016922478960076,\n",
-       " 0.712579287886184,\n",
-       " 0.6026056212665883,\n",
-       " 0.6534264808895159,\n",
-       " 0.9406558032092613,\n",
-       " 0.623508835511012,\n",
-       " 0.44325736774532887,\n",
-       " 0.8833904353543575,\n",
-       " 0.895967134696163,\n",
-       " 0.9477771593657223,\n",
-       " 0.5000394450694795,\n",
-       " 0.5380499283576413,\n",
-       " 0.4917852999339529,\n",
-       " 0.7209515917816869,\n",
-       " 0.4587356003690466,\n",
-       " 0.6047790993395193,\n",
-       " 0.22888555859748738,\n",
-       " 0.2276617663649101,\n",
-       " 0.42745092088478664,\n",
-       " 0.7157622640868482,\n",
-       " 0.7979009088983929,\n",
-       " 0.06131368020098338,\n",
-       " 0.6349870550732171,\n",
-       " 0.46459093970045073,\n",
-       " 0.8934771453311988,\n",
-       " 0.7525032161858489,\n",
-       " 0.858542754480404,\n",
-       " 0.9810114250923507,\n",
-       " 0.06053316107584106,\n",
-       " 0.13048184075410363,\n",
-       " 0.7705426676859094,\n",
-       " 0.24952925177962804,\n",
-       " 0.6589477803015216,\n",
-       " 0.8931055332729797,\n",
-       " 0.39449971595123545,\n",
-       " 0.07133612686783708,\n",
-       " 0.1831823380640042,\n",
-       " 0.25101125059050966,\n",
-       " 0.41229592652565916,\n",
-       " 0.17124167214033081,\n",
-       " 0.5143585426298091,\n",
-       " 0.6611512585350094,\n",
-       " 0.3654671264611441,\n",
-       " 0.14027370229463876,\n",
-       " 0.782569094676276,\n",
-       " 0.31494152095896577,\n",
-       " 0.45255994495438345,\n",
-       " 0.26275963858641804,\n",
-       " 0.7485372825773414,\n",
-       " 0.061227409220443896,\n",
-       " 0.3960291583869707,\n",
-       " 0.24608952320511068,\n",
-       " 0.1472768828491846,\n",
-       " 0.9156304635767226,\n",
-       " 0.25318093053080715,\n",
-       " 0.9219555541323886,\n",
-       " 0.3514811043819358,\n",
-       " 0.72334980717967,\n",
-       " 0.05512165231215704]"
-      ]
-     },
-     "execution_count": 10,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "#try\n",
-    "p=[random() for i in range(100)]\n",
-    "p"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
-    "def coordinatedescent(S,Z,i,var_x):\n",
-    "  sum=0\n",
-    "  for j in range(4):\n",
-    "    sum+=1/var_x[i,j]+(S[i,j]/Z[i,j])\n",
-    "  if(sum==1):\n",
-    "    return var_x[i] \n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def getS(h,alpha,Z,n,d,i):\n",
-    "  S = np.reshape([random()*100 for io in range(400)],(100,4))\n",
-    "  for j in range(4):\n",
-    "    S[i,j]= h[j]-alpha[j]*Z[i,j]\n",
-    "  return S\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def meepcalgo(n):\n",
-    "  index= np.random.randint(n)\n",
-    "  converged = False\n",
-    "  # alpha_i=X[index,:]\n",
-    "  while(index<100):\n",
-    "    if converged:\n",
-    "      break\n",
-    "    alpha_old = alpha[index]\n",
-    "    S = getS(h,alpha_old,Z,n,4,index)\n",
-    "    var_x=np.reshape([random() for i in range(100)],(100,4))\n",
-    "    f_val=coordinatedescent(S,Z,index)\n",
-    "    index+=1\n",
-    "    if(index==100):\n",
-    "      index=0\n",
-    "\n",
-    "  \n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 3,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def solution():\n",
+    "def solution(Z,alpha,h):\n",
     "    i = 0\n",
     "    updates = 0\n",
     "    converged = False\n",
@@ -400,10 +99,11 @@
     "    old = 0\n",
     "    while i < 100:\n",
     "        if converged:\n",
-    "            break\n",
+    "            return h\n",
     "        alpha_old[i] = alpha[i]\n",
+    "        f_x = 0\n",
     "        for j in range(4):\n",
-    "            s_i_j = h[j] - alpha[i]*Z[i][j]\n",
+    "            s_i_j = h[j] - alpha_old[i]*Z[i][j]\n",
     "            f_x += (1/(i/100 + s_i_j/Z[i][j]))\n",
     "        if f_x == 1:\n",
     "            alpha[i] = i/100\n",
@@ -423,8 +123,106 @@
     "            else:\n",
     "                updates = 0\n",
     "                stored_alpha_old = deepcopy(alpha)\n",
-    "    \n"
+    "    "
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([-2.24265051e-13, -2.66592304e-14,  4.75869344e-13,  1.10134124e-13])"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "h = solution(Z,alpha,h)\n",
+    "h"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([-4.45900953e+12, -3.75104602e+13,  2.10141715e+12,  9.07983796e+12])"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "v = 1/h\n",
+    "v"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def coordinatedescent(S,Z,i,var_x):\n",
+    "  sum=0\n",
+    "  for j in range(4):\n",
+    "    sum+=1/var_x[i,j]+(S[i,j]/Z[i,j])\n",
+    "  if(sum==1):\n",
+    "    return var_x[i] \n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def getS(h,alpha,Z,n,d,i):\n",
+    "  S = np.reshape([random()*100 for io in range(400)],(100,4))\n",
+    "  for j in range(4):\n",
+    "    S[i,j]= h[j]-alpha[j]*Z[i,j]\n",
+    "  return S\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def meepcalgo(n):\n",
+    "  index= np.random.randint(n)\n",
+    "  converged = False\n",
+    "  # alpha_i=X[index,:]\n",
+    "  while(index<100):\n",
+    "    if converged:\n",
+    "      break\n",
+    "    alpha_old = alpha[index]\n",
+    "    S = getS(h,alpha_old,Z,n,4,index)\n",
+    "    var_x=np.reshape([random() for i in range(100)],(100,4))\n",
+    "    f_val=coordinatedescent(S,Z,index)\n",
+    "    index+=1\n",
+    "    if(index==100):\n",
+    "      index=0"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
