--- a/meepc.ipynb
+++ b/meepc.ipynb
@@ -71,7 +71,7 @@
     {
      "data": {
       "text/plain": [
-       "array([803.43062001, 768.00097993, 759.7226528 , 832.58789476])"
+       "array([742.2005135 , 971.90207657, 825.8388863 , 727.95600898])"
       ]
      },
      "execution_count": 6,
@@ -102,11 +102,12 @@
     "            return h\n",
     "        alpha_old[i] = alpha[i]\n",
     "        f_x = 0\n",
+    "        u = random()\n",
     "        for j in range(4):\n",
     "            s_i_j = h[j] - alpha_old[i]*Z[i][j]\n",
-    "            f_x += (1/(i/100 + s_i_j/Z[i][j]))\n",
+    "            f_x += (1/(u + s_i_j/Z[i][j]))\n",
     "        if f_x == 1:\n",
-    "            alpha[i] = i/100\n",
+    "            alpha[i] = u\n",
     "        else:\n",
     "            alpha[i] = 0\n",
     "        h = h + (alpha[i] - alpha_old[i])*Z[i]\n",
@@ -134,7 +135,7 @@
     {
      "data": {
       "text/plain": [
-       "array([-2.24265051e-13, -2.66592304e-14,  4.75869344e-13,  1.10134124e-13])"
+       "array([-3.29514194e-13, -2.23820962e-13, -2.54019028e-13,  1.88363214e-13])"
       ]
      },
      "execution_count": 8,
@@ -155,7 +156,7 @@
     {
      "data": {
       "text/plain": [
-       "array([-4.45900953e+12, -3.75104602e+13,  2.10141715e+12,  9.07983796e+12])"
+       "array([-3.03477064e+12, -4.46785677e+12, -3.93671296e+12,  5.30889222e+12])"
       ]
      },
      "execution_count": 9,
